--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -10,7 +10,7 @@
 
 	{{#if userNeedsToUpgrade}}
 		<div>
-			<a href="/products?location=/newsletters" class="n-newsletter-signup__upgrade" data-trackable="newsletters-upgrade">Upgrade<span class="o-normalise-visually-hidden">&nbsp; your subscription to receive {{name}}</span></a>
+			<a href="/products?location=/newsletters" class="n-newsletter-signup__upgrade ft-concept-button__button" data-trackable="newsletters-upgrade">Upgrade<span class="o-normalise-visually-hidden">&nbsp; your subscription to receive {{name}}</span></a>
 		</div>
 	{{else}}
 		{{> n-newsletter-signup/templates/partials/newsletter-form}}
