--- a/styles/simple.scss
+++ b/styles/simple.scss
@@ -6,49 +6,36 @@
 	gap: 20px;
 	padding-top: 20px;
 	background-color: oColorsByName("white-80");
-
-	@include oGridRespondTo($from: S, $until: M) {
-		padding-left: 24px;
-		padding-bottom: 0;
-	}
+	padding-left: 24px;
+	padding-bottom: 0;
 
 	@include oGridRespondTo($from: M) {
+		align-items: start;
 		padding-left: 44px;
-		align-items: center;
 		padding-bottom: 20px;
 	}
 
 	.n-newsletter-signup__card_content {
 		display: flex;
+		flex-direction: column;
+		align-items: start;
 		padding-left: 0;
-
-		@include oGridRespondTo($from: S, $until: M) {
-			flex-direction: column;
-			align-items: start;
-		}
 
 		@include oGridRespondTo($from: M) {
 			flex-direction: row;
 			align-items: center;
-
 		}
 
-		h1 {
-			padding-left: 0;
-		}
+	}
 
-		.n-newsletter-signup__body {
-			@include oTypographySans($scale: 0);
-			color: oColorsByName('black-80');
-			display: inline-block;
+	.n-newsletter-signup__body {
+		@include oTypographySans($scale: 0);
+		color: oColorsByName('black-80');
+		display: inline-block;
+		width: fit-content;
 
-			@include oGridRespondTo($from: S, $until: M) {
-				width: fit-content;
-			}
-
-			@include oGridRespondTo($from: M) {
-				width: 70%;
-			}
+		@include oGridRespondTo($from: M) {
+			width: 70%;
 		}
 	}
 
@@ -58,55 +45,38 @@
 	}
 
 
-
-	img {
-		max-width: 100%;
-	}
-
-	.newsletter__flex-child-left {
+	.n-newsletter-signup__flex-child-left {
 		position: relative;
+		text-align: center;
+		color: oColorsByName('claret');
+		flex: 0 0 100%;
 		max-width: 158px;
 		max-height: 89px;
 
 		@include oGridRespondTo($from: M) {
+			max-width: 158px;
+			max-height: 89px;
+			flex: 0 0 30%;
 			overflow: hidden;
 		}
 
-		@include oGridRespondTo($until: M) {
-			flex: 0 0 30%;
-			text-align: center;
-			color: oColorsByName('claret');
-
+		&__card_image {
+			max-width: 100%;
 		}
 	}
 
 	.n-newsletter-signup__heading {
 		@include oTypographyDisplay($scale: 2, $weight: 'bold');
-
+		
 		display: inline-block;
 		align-self: flex-end;
 		margin: 0;
-
-		// for IE<11
+		font-size: 20px;
+		line-height: normal;
 		max-width: 100%;
 		flex-shrink: 1;
 		padding-top: 0;
-		line-height: 30px;
 
-		@include oGridRespondTo($from: M, $until: XL) {
-			font-size: 24px;
-			line-height: 28px;
-		}
-
-		@include oGridRespondTo($until: S) {
-			font-size: 40px;
-			line-height: 40px;
-		}
-
-		@include oGridRespondTo($from: S, $until: M) {
-			font-size: 20px;
-			line-height: normal;
-		}
 
 	}
 
